--- a/web.xml
+++ b/web.xml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>ipl</display-name>
+  <display-name>genricservet</display-name>
   <welcome-file-list>
-    <welcome-file>iplsignup.html</welcome-file>
-    
-  </welcome-file-list>
-  <servlet>
-  <servlet-name>serv</servlet-name>
-  <servlet-class>ipl.IplSignup</servlet-class>
+    <welcome-file>genric.html</welcome-file>
    
+  </welcome-file-list>
+  
+
+  <servlet>
+  <servlet-name>s1</servlet-name>
+  <servlet-class>com.genric.Genric</servlet-class>
   </servlet>
-  <servlet-mapping><servlet-name>serv</servlet-name>
+  <servlet-mapping>
+  <servlet-name>s1</servlet-name>
   <url-pattern>/iplsignup</url-pattern>
   </servlet-mapping>
+  </web-app>
   
- 
-
-<servlet>
-  <servlet-name>serv1</servlet-name>
-  <servlet-class>ipl.iplogin</servlet-class>
-   
-  </servlet>
-  <servlet-mapping><servlet-name>serv1</servlet-name>
-  <url-pattern>/loginform</url-pattern>
-  </servlet-mapping>
   
-</web-app>
